sapiens/src/chains/agents/ooda/snapshots/sapiens__chains__agents__ooda__multistep__tests__orienter_converts_context_to_chat_history.snap
---
source: sapiens/src/chains/agents/ooda/multistep.rs
expression: chat_history
---
Ok(
    ChatHistory {
        config: Config {
            max_steps: 10,
            chain_type: SingleStepOODA,
            min_tokens_for_completion: 256,
            max_tokens: None,
        },
        max_token: 4096,
        context: [
            [system]: You are part of Sapiens agents and your role is to orient the other agents based on the observations.,
            [user]: You are part of a group of cooperating assistants named Sapiens. Use available tools to answer the question as best as you can.
            You will collectively proceed iteratively using an OODA loop. Don't overstep your role.
            
            - Action response will be provided. 
            - Never produce the response of an Action. 
            - Only use YAML for the Action.
            - The loop will repeated until you have the answer to the original question. 
            - No task is complete until the Conclude Tool is used to provide the answer. 
            
            # Format of your response
            
            You must use the following format for your response. Comments are in bold and should be removed from your response.
            ====================
            ## Orientation: 
            **Plan the intermediate objectives to answer complete the original task. Maintain a list of current objectives updated as you go.**
            - <...>
            ```
            ====================
            
            # The following are the ONLY Tools one can use for the Actions:
            [],
        ],
        examples: [
            (
                [user]: # Your turn
                Original question: Sort in ascending order: [2, 3, 1, 4, 5]
                What is your orientation?,
                [assistant]: ## Orientation:
                - SandboxedPython can be used to sort the list.
                - I need to provide only the `tool_name` and `parameters` fields for the SandboxedPython Tool.
                - I expect the response of the Action to contains the field `stdout` with the sorted list and `stderr` empty.
                - I need to use the Conclude Tool to terminate the task when I have the sorted list in plain text.,
            ),
            (
                [user]: ## Decision:
                - We can use the sorted() function of Python to sort the list.
                ## The ONLY Action:
                ```yaml
                tool_name: SandboxedPython
                parameters:
                  code: |
                    lst = [2, 3, 1, 4, 5]
                    sorted_list = sorted(lst)
                    print(f"The sorted list is {sorted_list}")
                ```
                We will take further action based on the response.
                # Action SandboxedPython response:
                ```yaml
                stdout: |
                  The sorted list is [1, 2, 3, 4, 5]
                stderr: ''
                ```
                ## Observations:
                - We needed to sort the list in ascending order.
                - We have the response of the Action.
                - We have the sorted list: [1, 2, 3, 4, 5].# Your turn
                Original question: Sort in ascending order: [2, 3, 1, 4, 5]
                What is your orientation?,
                [assistant]: ## Orientation:
                - I know the answer to the original question.
                - I need to provide the `tool_name` and `parameters` fields for the Conclude Tool.,
            ),
        ],
        chitchat: [
            [user]: ## Observations:
            - The given list to sort is [2, 3, 1, 4, 5].
            - I need to sort this list in ascending order.,
            [assistant]: ## Orientation:
            - SandboxedPython can be used to sort the list.
            - I need to provide only the `tool_name` and `parameters` fields for the SandboxedPython Tool.
            - I expect the response of the Action to contains the field `stdout` with the sorted list and `stderr` empty.
            - I need to use the Conclude Tool to terminate the task when I have the sorted list in plain text.,
            [user]: ## Decision:
            - We can use the sorted() function of Python to sort the list.
            ## The ONLY Action:
            ```yaml
            tool_name: SandboxedPython
            parameters:
              code: |
                lst = [2, 3, 1, 4, 5]
                sorted_list = sorted(lst)
                print(f"The sorted list is {sorted_list}")
            ```
            That's it for now. We will take further action based on the response.
            # Action SandboxedPython response: 
            ```yaml
            stdout: |
              The sorted list is [1, 2, 3, 4, 5]
            stderr: ''```
            # Your turn
            Original question: Sort in ascending order: [2, 3, 1, 4, 5]
            What is your orientation?
            ## Observations:
            - We needed to sort the list in ascending order.
            - We have the response of the Action.
            - We have the sorted list: [1, 2, 3, 4, 5].,
        ],
    },
)
